the options display overlap fixed

--- a/src/app/Component/Header/header-component/header-component.component.css
+++ b/src/app/Component/Header/header-component/header-component.component.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   /*padding: 20px;*/
-  margin-top: 97px;
+  margin-top: 50px;
 }
 .leftHeader{
 
