--- a/src/app/Component/Options/options-component/options-component.component.css
+++ b/src/app/Component/Options/options-component/options-component.component.css
@@ -1,6 +1,6 @@
 /* General button container styling */
 .optionsButton {
-  display: inline-block;
+  /* display: inline-block; */
   margin: 5px;
 }
 
